--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,3 +15,6 @@
 
 <%= link_to "Update task",
   edit_task_path %>
+
+<%= link_to "Delete task",
+  task_path(@task), method: :delete, data: { confirm: "Are you sure?" } %>
