FIX: redirect to index when deleting a task

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -17,4 +17,4 @@
   edit_task_path %>
 
 <%= link_to "Delete task",
-  task_path(@task), method: :delete, data: { confirm: "Are you sure?" } %>
+  destroy_task_path(@task), method: :delete, data: { confirm: "Are you sure?" } %>
